<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_prehistory"
        android:title="@string/prehistory" />

    <item android:title="@string/group">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_first_gen"
                    android:title="@string/first_gen" />
                <item
                    android:id="@+id/menu_second_gen"
                    android:title="@string/second_gen" />
                <item
                    android:id="@+id/menu_third_gen"
                    android:title="@string/third_gen" />
                <item
                    android:id="@+id/menu_forth_gen"
                    android:title="@string/forth_gen" />
            </group>
        </menu>
    </item>
</menu>